--- a/app/src/main/res/drawable/background_left.xml
+++ b/app/src/main/res/drawable/background_left.xml
@@ -4,5 +4,5 @@
     <corners
         android:radius="10dp"
         android:topLeftRadius="0dp"/>
-    <solid android:color="@android:color/white"/>
+    <solid android:color="#F8CCAE"/>
 </shape>
