--- a/app/src/main/res/drawable/background_right.xml
+++ b/app/src/main/res/drawable/background_right.xml
@@ -4,6 +4,6 @@
     <corners
         android:radius="10dp"
         android:topRightRadius="0dp"/>
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="#F8CCAE"/>
 
 </shape>
