--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -8,7 +8,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/profile_image"
-        android:src="@drawable/ic_forum_24px"/>
+        android:src="@drawable/ic_account_circle_black_24dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
