--- a/app/src/main/res/layout/activity_registered_page2.xml
+++ b/app/src/main/res/layout/activity_registered_page2.xml
@@ -31,7 +31,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView1">
+        app:layout_constraintTop_toBottomOf="@+id/textView1"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,7 +65,7 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/go"
-                android:onClick="registered"/>
+                android:onClick="registered" />
         </LinearLayout>
 
         <ProgressBar
@@ -72,7 +73,7 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
 
     </LinearLayout>
