畫面正常化

--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".chatroom"
-    android:background="#000000">
+    android:background="#F3E5DD">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
