--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -8,8 +8,7 @@
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_alignParentEnd="true"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true">
+        android:layout_height="wrap_content">
         <ImageView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -18,24 +17,25 @@
             />
 
         <TextView
+            android:id="@+id/show_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_right"
             android:layout_alignParentEnd="true"
+            android:background="@drawable/background_right"
+            android:padding="8dp"
             android:text="hello"
-            android:id="@+id/show_message"
-            android:textSize="18sp"
             android:textColor="#fff"
-            android:padding="8dp"/>
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/chatroomtimetxt"
-            android:layout_width="match_parent"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/show_message"
             android:layout_marginEnd="1dp"
             android:layout_toStartOf="@+id/show_message"
-            android:text="" />
+            android:text=""
+            android:textAlignment="textEnd" />
 
 
     </RelativeLayout>
