--- a/app/src/main/res/layout/goods_item.xml
+++ b/app/src/main/res/layout/goods_item.xml
@@ -4,14 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/background"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
-    android:padding="10dp">
+    android:layout_height="150dp"
+    android:paddingTop="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
 
     <ImageView
         android:id="@+id/profile_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@drawable/go" />
+        app:srcCompat="@drawable/ic_image_black_24dp" />
 
     <TextView
         android:id="@+id/good_name"
@@ -36,7 +38,7 @@
     <TextView
         android:id="@+id/good_distribution"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_above="@+id/username"
         android:layout_below="@+id/good_name"
         android:layout_alignEnd="@id/username"
@@ -53,7 +55,8 @@
         android:layout_alignParentBottom="true"
         android:text="上傳者"
         android:textAlignment="textEnd"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:paddingBottom="10dp" />
     <TextView
         android:id="@+id/category"
         android:layout_width="wrap_content"
@@ -63,7 +66,14 @@
         android:text="種類"
         android:layout_marginLeft="10dp"
         android:textAlignment="textEnd"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:paddingBottom="10dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000000"
+        android:layout_alignParentBottom="true"/>
 
 
 </RelativeLayout>
